# Dashboard-Ciudad-Inteligente

./: README.md  pyproject.toml
data/: ejemplo_respuestas.csv  esquema_columnas.csv
docs/: automatizacion_futura.md  metodologia_puntajes.md  seguridad_y_despliegue.md
src/tablero_ciudad_inteligente/: app.py  auth.py  charts.py  config.py  data_loader.py  recommendations.py  scoring.py
tests/: test_scoring.py
